2020-10-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawClipPath): Remove break statement so that
	added clip-mask image is initialized properly and rendered-on as
	expected.  Thanks to László Böszörményi for reporting this problem
	prior to release.

2020-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (AC_PROG_CC_STDC): AC_PROG_CC_STDC is no longer
	required since AC_PROG_CC now provides its useful function.
	AC_PROG_CC_STDC is marked as obsolete after Autoconf 2.69.
	Quote all arguments to m4 macros.

2020-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Update syntax to avoid using deprecated syntax
	according to Autoconf 2.69.

2020-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (ReadWEBPImage): Use SetImageProfile() rather than
	AppendImageProfile().

2020-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetSamplingFactors): Correct
	formatting of sampling factors string.  Fixes SourceForge issue
	633 "MagickSetSamplingFactors() API mismatch - comma separated
	values instead of 1x1 ".

2020-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Improve error checking related
	to ImagePrimitive.

	* magick/resize.c (ResizeImage): If CloneImage() of resize_image
	to source_image fails then free source_image allocation before
	returning in order to prevent memory leak.

	* magick/image.c (CloneImage): Free clone_image allocation if
	ImgExtra allocation fails in order to prevent memory leak.  Fixes
	oss-fuzz 25342 "Indirect-leak in MagickMalloc".
	(SetImageOpacity): SetImageOpacity() now returns error status
	since it is possible for it to fail.

2020-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Ignore corrupt whitepoint and
	primary chromaticities tags.  Fixes oss-fuzz issue 25507
	"Divide-by-zero in DoubleToRational".  The divide by zero is